...
                  ),
                ),
              );
            }
          },
          child: CircleAvatar(
            key: Key('ProfileIcon'),
            radius: screenWidth > screenHeight
                ? 50
                : 40,
            backgroundImage: _profileImgPath != null
                ? NetworkImage(_profileImgPath!)
                : NetworkImage('https://i.ibb.co/WfJVvF6/profile-mock.png'),
...
        children: [
          BackgroundContainer(
            child: Column(
              children: [
                SizedBox(height: appBarPadding),
                CreateEventButton(
                  buttonText: 'Create Your Own Event',
                  onPressed: () async {
                    if (_currentUserId != null) {
                      final userEvents = await EventRepository()
                          .fetchUserEvents(_currentUserId!);
                      Navigator.push(
                        context,
...
