enum GiftCategory{
  Electronics,
  Fashion,
  Home,
  Books,
  Toys,
  Sports,
  Beauty,
  Food,
  Subscriptions,
  Art,
  PetSupplies,
  GiftCardsAndVouchers,
  Other
}
